--- a/django_poc/not_wordle/Pipfile
+++ b/django_poc/not_wordle/Pipfile
@@ -7,8 +7,9 @@ name = "pypi"
 django = "*"
 pandas = "*"
 jinja2 = "*"
+requests = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.10"
+python_version = "3"
